# wb_test

./: .env  Dockerfile  docker-compose.yaml  pyproject.toml  relations.py  requirements.txt
api/: app.py  exceptions.py  fetch_article.py  internal.py  redis.py  redis_helpers.py  schemas.py  settings.py  utils.py
